source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
:local {
	.article-teaser {
		position: relative;
		white-space: normal;
	}

	.link {
		@include size(100%, auto);
		@include aspect-ratio(560px, 360px);
		display: block;
	}

	.wrapper {
		background: $colorWhite;
		box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08);
		overflow: hidden;
		transition: box-shadow 0.2s $easeInOutCubic;
	}

	.top {
		width: 100%;
	}

	.description {
		@include offset(0, 0);
		@include size(60%, 100%);
		position: absolute;
		background: white;
		padding: $sizeGrid;
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		justify-content: space-between;

		.tags {
			margin-bottom: $sizeGrid;

			.tag:not(:first-child) {
				margin-left: 5px;
			}
		}

		.heading {
			color: $colorPrimary;
			margin-bottom: $sizeGridSecondary;
			transition: color 0.2s $easeInOutExpo;
		}

		.copy {
			color: $colorQuaternary;
			transition: color 0.2s $easeInOutExpo;
		}
	}

	.image {
		@include offset(0, 0);
		@include size(100%);
		position: absolute;
	}

	@include respond-to(MEDIUM) {
		.description {
			width: 80%;
		}
	}

	@include respond-to(SMALL) {
		.description {
			padding: $sizeGrid *2;
			width: 90%;
		}
	}

	@include respond-to(X_SMALL) {
		.link {
			@include aspect-ratio(1px, 1px);
		}
	}
}

@include hover('.link') {
	.heading,
	.copy {
		color: $colorSecondary;
	}

	.wrapper {
		box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
	}
}

